update domain startup doc